# fleet-core

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 1d225b3fd12b_add_maintenance_expense_contract_audit.py  2f316daf4431_initial_user_model.py  35bbf56e6ff8_add_notifications.py  7cddff1407cc_add_vehicle_driver_mileage_document.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/i18n/: __init__.py
app/models/: __init__.py  audit_log.py  contract.py  document.py  driver.py  expense.py  maintenance.py  mileage.py  notification.py  user.py  vehicle.py
app/repositories/: base.py  driver_repo.py  user_repo.py  vehicle_repo.py
app/schemas/: common.py  contract.py  driver.py  expense.py  maintenance.py  mileage.py  user.py  vehicle.py
app/services/: audit_service.py  auth_service.py  contract_service.py  dashboard_service.py  document_service.py  driver_service.py  expense_service.py  maintenance_service.py  mileage_service.py  notification_service.py  report_service.py  vehicle_service.py
app/tasks/: celery_app.py  notifications.py  reminders.py
app/templates/: base.html
app/utils/: email.py  export.py  s3.py  security.py  telegram.py  vault.py
app/web/: auth.py  contracts.py  dashboard.py  deps.py  documents.py  drivers.py  expenses.py  help.py  maintenance.py  notifications.py  reports.py  router.py  settings.py  vehicles.py
scripts/: create_superuser.py  seed_data.py  seed_documents.py  vault-init.sh
static/css/: app.css  custom.css  input.css
static/js/: app.js
tests/: conftest.py
tests/test_api/: test_auth.py  test_reports.py  test_vehicles.py
(+60 files in other folders)
