[project]
name = "fleetcore"
version = "0.1.0"
description = "Corporate fleet management system"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.14.0",
    # Validation & config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    # Templates
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
    # Redis & Celery
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # S3 / MinIO
    "boto3>=1.35.0",
    # Export
    "openpyxl>=3.1.5",
    "weasyprint>=63.0",
    # QR codes
    "qrcode[pil]>=8.0",
    # HTTP client (for Telegram, etc.)
    "httpx>=0.28.0",
    # Vault
    "hvac>=2.3.0",
    # Email
    "aiosmtplib>=3.0.2",
    # Starlette sessions
    "starlette>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.1",
    "aiosqlite>=0.20.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
